# python-erply-api

./: .gitignore  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README  README.rst  erply_api.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: tests.yaml
tests/: __init__.py  test_erply.py
