[metadata]
name = ErpyAPI
version = '0.2016.09.12'
license = BSD-3-Clause
license_files = LICENSE.rst
author = Priit Laes
author_email = plaes@plaes.org
maintainer = Priit Laes
maintainer_email = plaes@plaes.org
description = Python module for Erply InventoryAPI
long_description = file: README.rst
long_description_content_type = text/x-rst

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Point-Of-Sale
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.7
# Dependencies are in setup.py for Github's dependency graph.
